--- a/charts/tigera-operator/Chart.yaml
+++ b/charts/tigera-operator/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 appVersion: v3.27.2
-description: Installs the Tigera operator for Calico
+description: Tigera operator for Calico
 home: https://projectcalico.docs.tigera.io/about/about-calico
 icon: https://projectcalico.docs.tigera.io/images/felix_icon.png
 name: tigera-operator
