--- a/charts/external-secrets/values.yaml
+++ b/charts/external-secrets/values.yaml
@@ -229,7 +229,7 @@ webhook:
   # -- Specifies if webhook pod should use hostNetwork or not.
   hostNetwork: false
   image:
-    repository: docker.io/dcoppa/external-secrets
+    repository: ghcr.io/external-secrets/external-secrets
     pullPolicy: IfNotPresent
     # -- The image tag to use. The default is the chart appVersion.
     tag: ""
@@ -382,7 +382,7 @@ certController:
   revisionHistoryLimit: 10
 
   image:
-    repository: docker.io/dcoppa/external-secrets
+    repository: ghcr.io/external-secrets/external-secrets
     pullPolicy: IfNotPresent
     tag: ""
     flavour: ""
