--- a/charts/external-secrets/values.yaml
+++ b/charts/external-secrets/values.yaml
@@ -9,7 +9,7 @@ replicaCount: 1
 revisionHistoryLimit: 10
 
 image:
-  repository: docker.io/dcoppa/external-secrets
+  repository: ghcr.io/external-secrets/external-secrets
   pullPolicy: IfNotPresent
   # -- The image tag to use. The default is the chart appVersion.
   tag: ""
