--- a/charts/redis/templates/headless-svc.yaml
+++ b/charts/redis/templates/headless-svc.yaml
@@ -15,7 +15,7 @@ metadata:
     {{- $annotations := include "common.tplvalues.merge" ( dict "values" ( list .Values.sentinel.service.headless.annotations .Values.commonAnnotations ) "context" . ) }}
     {{- include "common.tplvalues.render" ( dict "value" $annotations "context" $) | nindent 4 }}
     {{- end }}
-    {{- include "redis.externalDNS.annotations" . | indent 4 }}
+    {{- include "redis.externalDNS.annotations" . | nindent 4 }}
   {{- end }}
 spec:
   type: ClusterIP
