--- a/charts/zookeeper/Chart.yaml
+++ b/charts/zookeeper/Chart.yaml
@@ -2,9 +2,9 @@ annotations:
   category: Infrastructure
   images: |
     - name: os-shell
-      image: docker.io/bitnami/os-shell:12-debian-12-r18
+      image: docker.io/bitnami/os-shell:12-debian-12-r22
     - name: zookeeper
-      image: docker.io/bitnami/zookeeper:3.9.2-debian-12-r2
+      image: docker.io/bitnami/zookeeper:3.9.2-debian-12-r7
   licenses: Apache-2.0
 apiVersion: v2
 appVersion: 3.9.2
@@ -21,9 +21,9 @@ icon: https://bitnami.com/assets/stacks/zookeeper/img/zookeeper-stack-220x234.pn
 keywords:
 - zookeeper
 maintainers:
-- name: VMware, Inc.
+- name: Broadcom, Inc. All Rights Reserved.
   url: https://github.com/bitnami/charts
 name: zookeeper
 sources:
 - https://github.com/bitnami/charts/tree/main/bitnami/zookeeper
-version: 13.1.1
+version: 13.4.3
